[OLINGO-175, OLINGO-205] provided failsafe plugin to start to import integration test from ODataJClient